methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  avance()
  if(getCouleurSol()==color.green){
    recule()
    return true
  }
  recule()
  return false
}